--- a/styles.css
+++ b/styles.css
@@ -447,3 +447,73 @@ a, b, blockquote, center, code, div, h1, h2, h3, h4, h5, h6, i, img, p, pre, spa
         padding-left: 0px
     }
 }
+
+.btn {
+    border: 3px solid black;
+    background-color: white;
+    color: black;
+    padding: 14px 28px;
+    cursor: pointer;
+    border-radius:50px;
+    -moz-border-radius:50px;
+    -webkit-border-radius:50px;
+    height:50px;
+    width:500px;
+    accent-color: white;
+    font-size: 25px;
+    font-family: 'Roboto', Arial, sans-serif;
+}
+
+/* Green */
+.success {
+    border-color: #04AA6D;
+    color: green;
+}
+
+.success:hover {
+    background-color: #04AA6D;
+    color: white;
+}
+
+/* Blue */
+.info {
+    border-color: #2196F3;
+    color: dodgerblue
+}
+
+.info:hover {
+    background: #2196F3;
+    color: white;
+}
+
+/* Orange */
+.warning {
+    border-color: #f85602;
+    color: #f85602;
+}
+
+.warning:hover {
+    background: #f85602;
+    color: white;
+}
+
+/* Red */
+.danger {
+    border-color: #f44336;
+    color: red
+}
+
+.danger:hover {
+    background: #f44336;
+    color: white;
+}
+
+/* Gray */
+.default {
+    border-color: #e7e7e7;
+    color: black;
+}
+
+.default:hover {
+    background: #e7e7e7;
+}
